# cpp-library-cookiecutter

./: .gitignore  README.rst  cookiecutter.json  jinja_extension.py
{{cookiecutter.repository}}/: .versup.json  CMakeLists.txt  README.rst  {{ cookiecutter.cmake_project }}Config.cmake
{{cookiecutter.repository}}/cmake/: {{ cookiecutter.cmake_project }}Config.cmake  {{ cookiecutter.cmake_project }}Config.cmake.in
{{cookiecutter.repository}}/doc/: CMakeLists.txt
{{cookiecutter.repository}}/doc/doxygen/: index.dox  namespaces.dox
{{cookiecutter.repository}}/doc/sphinx/: conf.py  doxygen.py  glossary.rst  index.rst  installing.rst
{{cookiecutter.repository}}/src/: CMakeLists.txt
{{cookiecutter.repository}}/src/{{cookiecutter.header_subfolder}}/: fibonacci.cpp  fibonacci.h
{{cookiecutter.repository}}/src/{{cookiecutter.library_header_subfolder}}/: fibonacci.cpp  fibonacci.h
{{cookiecutter.repository}}/src/{{cookiecutter.namespace}}/: fibonacci.cpp  fibonacci.h
{{cookiecutter.repository}}/test/unit/: CMakeLists.txt  testFibonacci.cpp
